hotfix: agregar nuevos dispositivos y mejorar validaciones en UsuarioValidator
- Se añaden configuraciones para nuevos dispositivos Samsung en el archivo deviceStreaming.xml.
- Se mejora la validación de correos electrónicos en UsuarioValidator, permitiendo dominios específicos y ajustando la longitud mínima de contraseñas a 8 caracteres.
- Se implementan cambios en el ViewModel del carrito para ejecutar operaciones de forma síncrona durante las pruebas, asegurando que las corutinas se completen correctamente.
- Se añaden pruebas unitarias para validar el comportamiento de los métodos en el CarritoViewModel y UsuarioValidator.